antex-rs/tui/src/chatwidget/snapshots/antex_tui__chatwidget__tests__experimental_features_loading.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 3128
expression: "render_bottom_popup(&chat, 80)"
---
  Experimental features
  Checked features are configured on. Some experimental features take effect
  only in new tasks or after restarting the Antex server.
  Loading server experiments…



  Press space to select or enter to save
