antex-rs/tui/src/chatwidget/snapshots/antex_tui__chatwidget__tests__guardian_approved_exec_is_hidden_from_history.snap
---
source: tui/src/chatwidget/tests/guardian.rs
assertion_line: 351
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---








 ┃ Ask Antex to do anything

  gpt-5.6-sol default · /tmp/project
