antex-rs/tui/src/chatwidget/snapshots/antex_tui__chatwidget__tests__guardian_approved_request_permissions_clears_status_without_history.snap
---
source: tui/src/chatwidget/tests/guardian.rs
assertion_line: 433
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---





• Working (0s • esc to interrupt)


 ┃ Ask Antex to do anything

  gpt-5.6-sol default · /tmp/project
