antex-rs/tui/src/chatwidget/snapshots/antex_tui__chatwidget__tests__guardian_goal_continuation_drops_stale_reviews.snap
---
source: tui/src/chatwidget/tests/guardian.rs
assertion_line: 803
expression: normalize_snapshot_paths(rendered)
---
• Reviewing approval request (0s • esc to interrupt)
  └ rm -rf '/tmp/current-review'


 ┃ Ask Antex to do anything

  gpt-5.6-sol default · /tmp/project
